// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TrustpilotStars /> renders default 5 stars rating without a11y violations 1`] = `
<div>
  <svg
    aria-labelledby="trust-pilot-rating-title trust-pilot-rating-desc"
    height="20px"
    role="img"
    viewBox="0 0 512 96"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <title
      id="trust-pilot-rating-title"
    >
      Trustpilot Stars Logo
    </title>
    <desc
      id="trust-pilot-rating-desc"
    >
      An illustration of the Trustpilot Stars Logo
    </desc>
    <g
      fill="none"
      fill-rule="evenodd"
      id="Trustpilot_ratings_5star-RGB"
      stroke="none"
      stroke-width="1"
    >
      <g>
        <g>
          <rect
            fill="#00B67A"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path1"
            width="96"
            x="0"
            y="0"
          />
          <rect
            fill="#00B67A"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path2"
            width="96"
            x="104"
            y="0"
          />
          <rect
            fill="#00B67A"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path3"
            width="96"
            x="208"
            y="0"
          />
          <rect
            fill="#00B67A"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path4"
            width="96"
            x="312"
            y="0"
          />
          <rect
            fill="#00B67A"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path5"
            width="96"
            x="416"
            y="0"
          />
          <path
            d="M48,64.7 L62.6,61 L68.7,79.8 L48,64.7 Z M81.6,40.4 L55.9,40.4 L48,16.2 L40.1,40.4 L14.4,40.4 L35.2,55.4 L27.3,79.6 L48.1,64.6 L60.9,55.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape1"
          />
          <path
            d="M152,64.7 L166.6,61 L172.7,79.8 L152,64.7 Z M185.6,40.4 L159.9,40.4 L152,16.2 L144.1,40.4 L118.4,40.4 L139.2,55.4 L131.3,79.6 L152.1,64.6 L164.9,55.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape2"
          />
          <path
            d="M256,64.7 L270.6,61 L276.7,79.8 L256,64.7 Z M289.6,40.4 L263.9,40.4 L256,16.2 L248.1,40.4 L222.4,40.4 L243.2,55.4 L235.3,79.6 L256.1,64.6 L268.9,55.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape3"
          />
          <path
            d="M360,64.7 L374.6,61 L380.7,79.8 L360,64.7 Z M393.6,40.4 L367.9,40.4 L360,16.2 L352.1,40.4 L326.4,40.4 L347.2,55.4 L339.3,79.6 L360.1,64.6 L372.9,55.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape4"
          />
          <path
            d="M464,64.7 L478.6,61 L484.7,79.8 L464,64.7 Z M497.6,40.4 L471.9,40.4 L464,16.2 L456.1,40.4 L430.4,40.4 L451.2,55.4 L443.3,79.6 L464.1,64.6 L476.9,55.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape5"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`<TrustpilotStars /> renders without a11y violations the given rating: 0 1`] = `
<div>
  <svg
    aria-labelledby="trust-pilot-rating-title trust-pilot-rating-desc"
    height="20px"
    role="img"
    viewBox="0 0 512 96"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <title
      id="trust-pilot-rating-title"
    >
      Trustpilot Stars Logo
    </title>
    <desc
      id="trust-pilot-rating-desc"
    >
      An illustration of the Trustpilot Stars Logo
    </desc>
    <g
      fill="none"
      fill-rule="evenodd"
      id="Trustpilot_ratings_0star_grey-RGB"
      stroke="none"
      stroke-width="1"
    >
      <g
        id="Trustpilot_ratings_0star_grey-RGB-Copy-4"
      >
        <g>
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path1"
            width="96"
            x="0"
            y="0"
          />
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path2"
            width="96"
            x="104"
            y="0"
          />
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path3"
            width="96"
            x="208"
            y="0"
          />
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path4"
            width="96"
            x="312"
            y="0"
          />
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path5"
            width="96"
            x="416"
            y="0"
          />
          <path
            d="M48,64.7 L62.6,61 L68.7,79.8 L48,64.7 Z M81.6,40.4 L55.9,40.4 L48,16.2 L40.1,40.4 L14.4,40.4 L35.2,55.4 L27.3,79.6 L48.1,64.6 L60.9,55.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape1"
          />
          <path
            d="M152,64.7 L166.6,61 L172.7,79.8 L152,64.7 Z M185.6,40.4 L159.9,40.4 L152,16.2 L144.1,40.4 L118.4,40.4 L139.2,55.4 L131.3,79.6 L152.1,64.6 L164.9,55.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape2"
          />
          <path
            d="M256,64.7 L270.6,61 L276.7,79.8 L256,64.7 Z M289.6,40.4 L263.9,40.4 L256,16.2 L248.1,40.4 L222.4,40.4 L243.2,55.4 L235.3,79.6 L256.1,64.6 L268.9,55.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape3"
          />
          <path
            d="M360,64.7 L374.6,61 L380.7,79.8 L360,64.7 Z M393.6,40.4 L367.9,40.4 L360,16.2 L352.1,40.4 L326.4,40.4 L347.2,55.4 L339.3,79.6 L360.1,64.6 L372.9,55.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape4"
          />
          <path
            d="M464,64.7 L478.6,61 L484.7,79.8 L464,64.7 Z M497.6,40.4 L471.9,40.4 L464,16.2 L456.1,40.4 L430.4,40.4 L451.2,55.4 L443.3,79.6 L464.1,64.6 L476.9,55.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape5"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`<TrustpilotStars /> renders without a11y violations the given rating: 1 1`] = `
<div>
  <svg
    aria-labelledby="trust-pilot-rating-title trust-pilot-rating-desc"
    height="20px"
    role="img"
    viewBox="0 0 512 96"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <title
      id="trust-pilot-rating-title"
    >
      Trustpilot Stars Logo
    </title>
    <desc
      id="trust-pilot-rating-desc"
    >
      An illustration of the Trustpilot Stars Logo
    </desc>
    <g
      fill="none"
      fill-rule="evenodd"
      id="Trustpilot_ratings_1star-RGB"
      stroke="none"
      stroke-width="1"
    >
      <g>
        <g>
          <rect
            fill="#FF3722"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path1"
            width="96"
            x="0"
            y="0"
          />
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path2"
            width="96"
            x="104"
            y="0"
          />
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path3"
            width="96"
            x="208"
            y="0"
          />
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path4"
            width="96"
            x="312"
            y="0"
          />
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path5"
            width="96"
            x="416"
            y="0"
          />
          <path
            d="M48,64.7 L62.6,61 L68.7,79.8 L48,64.7 Z M81.6,40.4 L55.9,40.4 L48,16.2 L40.1,40.4 L14.4,40.4 L35.2,55.4 L27.3,79.6 L48.1,64.6 L60.9,55.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape1"
          />
          <path
            d="M152,64.7 L166.6,61 L172.7,79.8 L152,64.7 Z M185.6,40.4 L159.9,40.4 L152,16.2 L144.1,40.4 L118.4,40.4 L139.2,55.4 L131.3,79.6 L152.1,64.6 L164.9,55.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape2"
          />
          <path
            d="M256,64.7 L270.6,61 L276.7,79.8 L256,64.7 Z M289.6,40.4 L263.9,40.4 L256,16.2 L248.1,40.4 L222.4,40.4 L243.2,55.4 L235.3,79.6 L256.1,64.6 L268.9,55.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape3"
          />
          <path
            d="M360,64.7 L374.6,61 L380.7,79.8 L360,64.7 Z M393.6,40.4 L367.9,40.4 L360,16.2 L352.1,40.4 L326.4,40.4 L347.2,55.4 L339.3,79.6 L360.1,64.6 L372.9,55.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape4"
          />
          <path
            d="M464,64.7 L478.6,61 L484.7,79.8 L464,64.7 Z M497.6,40.4 L471.9,40.4 L464,16.2 L456.1,40.4 L430.4,40.4 L451.2,55.4 L443.3,79.6 L464.1,64.6 L476.9,55.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape5"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`<TrustpilotStars /> renders without a11y violations the given rating: 1.5 1`] = `
<div>
  <svg
    aria-labelledby="trust-pilot-rating-title trust-pilot-rating-desc"
    height="20px"
    role="img"
    viewBox="0 0 512 96"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <title
      id="trust-pilot-rating-title"
    >
      Trustpilot Stars Logo
    </title>
    <desc
      id="trust-pilot-rating-desc"
    >
      An illustration of the Trustpilot Stars Logo
    </desc>
    <g
      fill="none"
      fill-rule="evenodd"
      id="Trustpilot_ratings_1halfstar-RGB"
      stroke="none"
      stroke-width="1"
    >
      <g
        fill-rule="nonzero"
        id="Trustpilot_ratings_1star-RGB-Copy-3"
      >
        <rect
          fill="#FF3722"
          height="96"
          id="Rectangle-path1"
          width="96"
          x="0"
          y="0"
        />
        <rect
          fill="#DCDCE6"
          height="96"
          id="Rectangle-path2"
          width="96"
          x="104"
          y="0"
        />
        <rect
          fill="#FF3722"
          height="96"
          id="Rectangle-path3"
          width="48"
          x="104"
          y="0"
        />
        <rect
          fill="#DCDCE6"
          height="96"
          id="Rectangle-path4"
          width="96"
          x="208"
          y="0"
        />
        <rect
          fill="#DCDCE6"
          height="96"
          id="Rectangle-path5"
          width="96"
          x="312"
          y="0"
        />
        <rect
          fill="#DCDCE6"
          height="96"
          id="Rectangle-path6"
          width="96"
          x="416"
          y="0"
        />
        <path
          d="M48,64.7 L62.6,61 L68.7,79.8 L48,64.7 Z M81.6,40.4 L55.9,40.4 L48,16.2 L40.1,40.4 L14.4,40.4 L35.2,55.4 L27.3,79.6 L48.1,64.6 L60.9,55.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape1"
        />
        <path
          d="M152,64.7 L166.6,61 L172.7,79.8 L152,64.7 Z M185.6,40.4 L159.9,40.4 L152,16.2 L144.1,40.4 L118.4,40.4 L139.2,55.4 L131.3,79.6 L152.1,64.6 L164.9,55.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape2"
        />
        <path
          d="M256,64.7 L270.6,61 L276.7,79.8 L256,64.7 Z M289.6,40.4 L263.9,40.4 L256,16.2 L248.1,40.4 L222.4,40.4 L243.2,55.4 L235.3,79.6 L256.1,64.6 L268.9,55.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape3"
        />
        <path
          d="M360,64.7 L374.6,61 L380.7,79.8 L360,64.7 Z M393.6,40.4 L367.9,40.4 L360,16.2 L352.1,40.4 L326.4,40.4 L347.2,55.4 L339.3,79.6 L360.1,64.6 L372.9,55.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape4"
        />
        <path
          d="M464,64.7 L478.6,61 L484.7,79.8 L464,64.7 Z M497.6,40.4 L471.9,40.4 L464,16.2 L456.1,40.4 L430.4,40.4 L451.2,55.4 L443.3,79.6 L464.1,64.6 L476.9,55.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape5"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`<TrustpilotStars /> renders without a11y violations the given rating: 2 1`] = `
<div>
  <svg
    aria-labelledby="trust-pilot-rating-title trust-pilot-rating-desc"
    height="20px"
    role="img"
    viewBox="0 0 512 96"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <title
      id="trust-pilot-rating-title"
    >
      Trustpilot Stars Logo
    </title>
    <desc
      id="trust-pilot-rating-desc"
    >
      An illustration of the Trustpilot Stars Logo
    </desc>
    <g
      fill="none"
      fill-rule="evenodd"
      id="Trustpilot_ratings_2star-RGB"
      stroke="none"
      stroke-width="1"
    >
      <g>
        <g>
          <rect
            fill="#FF8622"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path1"
            width="96"
            x="0"
            y="0"
          />
          <rect
            fill="#FF8622"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path2"
            width="96"
            x="104"
            y="0"
          />
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path3"
            width="96"
            x="208"
            y="0"
          />
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path4"
            width="96"
            x="312"
            y="0"
          />
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path5"
            width="96"
            x="416"
            y="0"
          />
          <path
            d="M48,64.7 L62.6,61 L68.7,79.8 L48,64.7 Z M81.6,40.4 L55.9,40.4 L48,16.2 L40.1,40.4 L14.4,40.4 L35.2,55.4 L27.3,79.6 L48.1,64.6 L60.9,55.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape1"
          />
          <path
            d="M152,64.7 L166.6,61 L172.7,79.8 L152,64.7 Z M185.6,40.4 L159.9,40.4 L152,16.2 L144.1,40.4 L118.4,40.4 L139.2,55.4 L131.3,79.6 L152.1,64.6 L164.9,55.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape2"
          />
          <path
            d="M256,64.7 L270.6,61 L276.7,79.8 L256,64.7 Z M289.6,40.4 L263.9,40.4 L256,16.2 L248.1,40.4 L222.4,40.4 L243.2,55.4 L235.3,79.6 L256.1,64.6 L268.9,55.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape3"
          />
          <path
            d="M360,64.7 L374.6,61 L380.7,79.8 L360,64.7 Z M393.6,40.4 L367.9,40.4 L360,16.2 L352.1,40.4 L326.4,40.4 L347.2,55.4 L339.3,79.6 L360.1,64.6 L372.9,55.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape4"
          />
          <path
            d="M464,64.7 L478.6,61 L484.7,79.8 L464,64.7 Z M497.6,40.4 L471.9,40.4 L464,16.2 L456.1,40.4 L430.4,40.4 L451.2,55.4 L443.3,79.6 L464.1,64.6 L476.9,55.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape5"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`<TrustpilotStars /> renders without a11y violations the given rating: 2.5 1`] = `
<div>
  <svg
    aria-labelledby="trust-pilot-rating-title trust-pilot-rating-desc"
    height="20px"
    role="img"
    viewBox="0 0 512 96"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <title
      id="trust-pilot-rating-title"
    >
      Trustpilot Stars Logo
    </title>
    <desc
      id="trust-pilot-rating-desc"
    >
      An illustration of the Trustpilot Stars Logo
    </desc>
    <g
      fill="none"
      fill-rule="evenodd"
      id="Trustpilot_ratings_2halfstar-RGB"
      stroke="none"
      stroke-width="1"
    >
      <g
        fill-rule="nonzero"
        id="Trustpilot_ratings_2star-RGB-Copy-3"
      >
        <rect
          fill="#FF8622"
          height="96"
          id="Rectangle-path1"
          width="96"
          x="0"
          y="0"
        />
        <rect
          fill="#FF8622"
          height="96"
          id="Rectangle-path2"
          width="96"
          x="104"
          y="0"
        />
        <rect
          fill="#DCDCE6"
          height="96"
          id="Rectangle-path3"
          width="96"
          x="208"
          y="0"
        />
        <rect
          fill="#FF8622"
          height="96"
          id="Rectangle-path4"
          width="48"
          x="208"
          y="0"
        />
        <rect
          fill="#DCDCE6"
          height="96"
          id="Rectangle-path5"
          width="96"
          x="312"
          y="0"
        />
        <rect
          fill="#DCDCE6"
          height="96"
          id="Rectangle-path6"
          width="96"
          x="416"
          y="0"
        />
        <path
          d="M48,64.7 L62.6,61 L68.7,79.8 L48,64.7 Z M81.6,40.4 L55.9,40.4 L48,16.2 L40.1,40.4 L14.4,40.4 L35.2,55.4 L27.3,79.6 L48.1,64.6 L60.9,55.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape1"
        />
        <path
          d="M152,64.7 L166.6,61 L172.7,79.8 L152,64.7 Z M185.6,40.4 L159.9,40.4 L152,16.2 L144.1,40.4 L118.4,40.4 L139.2,55.4 L131.3,79.6 L152.1,64.6 L164.9,55.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape2"
        />
        <path
          d="M256,64.7 L270.6,61 L276.7,79.8 L256,64.7 Z M289.6,40.4 L263.9,40.4 L256,16.2 L248.1,40.4 L222.4,40.4 L243.2,55.4 L235.3,79.6 L256.1,64.6 L268.9,55.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape3"
        />
        <path
          d="M360,64.7 L374.6,61 L380.7,79.8 L360,64.7 Z M393.6,40.4 L367.9,40.4 L360,16.2 L352.1,40.4 L326.4,40.4 L347.2,55.4 L339.3,79.6 L360.1,64.6 L372.9,55.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape4"
        />
        <path
          d="M464,64.7 L478.6,61 L484.7,79.8 L464,64.7 Z M497.6,40.4 L471.9,40.4 L464,16.2 L456.1,40.4 L430.4,40.4 L451.2,55.4 L443.3,79.6 L464.1,64.6 L476.9,55.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape5"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`<TrustpilotStars /> renders without a11y violations the given rating: 3 1`] = `
<div>
  <svg
    aria-labelledby="trust-pilot-rating-title trust-pilot-rating-desc"
    height="20px"
    role="img"
    viewBox="0 0 512 96"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <title
      id="trust-pilot-rating-title"
    >
      Trustpilot Stars Logo
    </title>
    <desc
      id="trust-pilot-rating-desc"
    >
      An illustration of the Trustpilot Stars Logo
    </desc>
    <g
      fill="none"
      fill-rule="evenodd"
      id="Trustpilot_ratings_3star-RGB"
      stroke="none"
      stroke-width="1"
    >
      <g>
        <g>
          <rect
            fill="#FFCE00"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path1"
            width="96"
            x="0"
            y="0"
          />
          <rect
            fill="#FFCE00"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path2"
            width="96"
            x="104"
            y="0"
          />
          <rect
            fill="#FFCE00"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path3"
            width="96"
            x="208"
            y="0"
          />
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path4"
            width="96"
            x="312"
            y="0"
          />
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path5"
            width="96"
            x="416"
            y="0"
          />
          <path
            d="M48,64.7 L62.6,61 L68.7,79.8 L48,64.7 Z M81.6,40.4 L55.9,40.4 L48,16.2 L40.1,40.4 L14.4,40.4 L35.2,55.4 L27.3,79.6 L48.1,64.6 L60.9,55.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape1"
          />
          <path
            d="M152,64.7 L166.6,61 L172.7,79.8 L152,64.7 Z M185.6,40.4 L159.9,40.4 L152,16.2 L144.1,40.4 L118.4,40.4 L139.2,55.4 L131.3,79.6 L152.1,64.6 L164.9,55.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape2"
          />
          <path
            d="M256,64.7 L270.6,61 L276.7,79.8 L256,64.7 Z M289.6,40.4 L263.9,40.4 L256,16.2 L248.1,40.4 L222.4,40.4 L243.2,55.4 L235.3,79.6 L256.1,64.6 L268.9,55.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape3"
          />
          <path
            d="M360,64.7 L374.6,61 L380.7,79.8 L360,64.7 Z M393.6,40.4 L367.9,40.4 L360,16.2 L352.1,40.4 L326.4,40.4 L347.2,55.4 L339.3,79.6 L360.1,64.6 L372.9,55.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape4"
          />
          <path
            d="M464,64.7 L478.6,61 L484.7,79.8 L464,64.7 Z M497.6,40.4 L471.9,40.4 L464,16.2 L456.1,40.4 L430.4,40.4 L451.2,55.4 L443.3,79.6 L464.1,64.6 L476.9,55.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape5"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`<TrustpilotStars /> renders without a11y violations the given rating: 3.5 1`] = `
<div>
  <svg
    aria-labelledby="trust-pilot-rating-title trust-pilot-rating-desc"
    height="20px"
    role="img"
    viewBox="0 0 512 96"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <title
      id="trust-pilot-rating-title"
    >
      Trustpilot Stars Logo
    </title>
    <desc
      id="trust-pilot-rating-desc"
    >
      An illustration of the Trustpilot Stars Logo
    </desc>
    <g
      fill="none"
      fill-rule="evenodd"
      id="Trustpilot_ratings_3halfstar-RGB"
      stroke="none"
      stroke-width="1"
    >
      <g
        fill-rule="nonzero"
        id="Trustpilot_ratings_3star-RGB-Copy-3"
      >
        <rect
          fill="#FFCE00"
          height="96"
          id="Rectangle-path1"
          width="96"
          x="0"
          y="0"
        />
        <rect
          fill="#FFCE00"
          height="96"
          id="Rectangle-path2"
          width="96"
          x="104"
          y="0"
        />
        <rect
          fill="#FFCE00"
          height="96"
          id="Rectangle-path3"
          width="96"
          x="208"
          y="0"
        />
        <rect
          fill="#DCDCE6"
          height="96"
          id="Rectangle-path4"
          width="96"
          x="312"
          y="0"
        />
        <rect
          fill="#FFCE00"
          height="96"
          id="Rectangle-path5"
          width="48"
          x="312"
          y="0"
        />
        <rect
          fill="#DCDCE6"
          height="96"
          id="Rectangle-path6"
          width="96"
          x="416"
          y="0"
        />
        <path
          d="M48,64.7 L62.6,61 L68.7,79.8 L48,64.7 Z M81.6,40.4 L55.9,40.4 L48,16.2 L40.1,40.4 L14.4,40.4 L35.2,55.4 L27.3,79.6 L48.1,64.6 L60.9,55.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape1"
        />
        <path
          d="M152,64.7 L166.6,61 L172.7,79.8 L152,64.7 Z M185.6,40.4 L159.9,40.4 L152,16.2 L144.1,40.4 L118.4,40.4 L139.2,55.4 L131.3,79.6 L152.1,64.6 L164.9,55.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape2"
        />
        <path
          d="M256,64.7 L270.6,61 L276.7,79.8 L256,64.7 Z M289.6,40.4 L263.9,40.4 L256,16.2 L248.1,40.4 L222.4,40.4 L243.2,55.4 L235.3,79.6 L256.1,64.6 L268.9,55.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape3"
        />
        <path
          d="M360,64.7 L374.6,61 L380.7,79.8 L360,64.7 Z M393.6,40.4 L367.9,40.4 L360,16.2 L352.1,40.4 L326.4,40.4 L347.2,55.4 L339.3,79.6 L360.1,64.6 L372.9,55.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape4"
        />
        <path
          d="M464,64.7 L478.6,61 L484.7,79.8 L464,64.7 Z M497.6,40.4 L471.9,40.4 L464,16.2 L456.1,40.4 L430.4,40.4 L451.2,55.4 L443.3,79.6 L464.1,64.6 L476.9,55.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 Z"
          fill="#FFFFFF"
          id="Shape5"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`<TrustpilotStars /> renders without a11y violations the given rating: 4 1`] = `
<div>
  <svg
    aria-labelledby="trust-pilot-rating-title trust-pilot-rating-desc"
    height="20px"
    role="img"
    viewBox="0 0 512 96"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <title
      id="trust-pilot-rating-title"
    >
      Trustpilot Stars Logo
    </title>
    <desc
      id="trust-pilot-rating-desc"
    >
      An illustration of the Trustpilot Stars Logo
    </desc>
    <g
      fill="none"
      fill-rule="evenodd"
      id="Trustpilot_ratings_4star-RGB"
      stroke="none"
      stroke-width="1"
    >
      <g>
        <g>
          <rect
            fill="#73CF11"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path1"
            width="96"
            x="0"
            y="0"
          />
          <rect
            fill="#73CF11"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path2"
            width="96"
            x="104"
            y="0"
          />
          <rect
            fill="#73CF11"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path3"
            width="96"
            x="208"
            y="0"
          />
          <rect
            fill="#73CF11"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path4"
            width="96"
            x="312"
            y="0"
          />
          <rect
            fill="#DCDCE6"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path5"
            width="96"
            x="416"
            y="0"
          />
          <path
            d="M48,64.7 L62.6,61 L68.7,79.8 L48,64.7 Z M81.6,40.4 L55.9,40.4 L48,16.2 L40.1,40.4 L14.4,40.4 L35.2,55.4 L27.3,79.6 L48.1,64.6 L60.9,55.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape1"
          />
          <path
            d="M152,64.7 L166.6,61 L172.7,79.8 L152,64.7 Z M185.6,40.4 L159.9,40.4 L152,16.2 L144.1,40.4 L118.4,40.4 L139.2,55.4 L131.3,79.6 L152.1,64.6 L164.9,55.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape2"
          />
          <path
            d="M256,64.7 L270.6,61 L276.7,79.8 L256,64.7 Z M289.6,40.4 L263.9,40.4 L256,16.2 L248.1,40.4 L222.4,40.4 L243.2,55.4 L235.3,79.6 L256.1,64.6 L268.9,55.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape3"
          />
          <path
            d="M360,64.7 L374.6,61 L380.7,79.8 L360,64.7 Z M393.6,40.4 L367.9,40.4 L360,16.2 L352.1,40.4 L326.4,40.4 L347.2,55.4 L339.3,79.6 L360.1,64.6 L372.9,55.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape4"
          />
          <path
            d="M464,64.7 L478.6,61 L484.7,79.8 L464,64.7 Z M497.6,40.4 L471.9,40.4 L464,16.2 L456.1,40.4 L430.4,40.4 L451.2,55.4 L443.3,79.6 L464.1,64.6 L476.9,55.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape5"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`<TrustpilotStars /> renders without a11y violations the given rating: 4.5 1`] = `
<div>
  <svg
    aria-labelledby="trust-pilot-rating-title trust-pilot-rating-desc"
    height="20px"
    role="img"
    viewBox="0 0 512 96"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <title
      id="trust-pilot-rating-title"
    >
      Trustpilot Stars Logo
    </title>
    <desc
      id="trust-pilot-rating-desc"
    >
      An illustration of the Trustpilot Stars Logo
    </desc>
    <g
      fill="none"
      fill-rule="evenodd"
      id="Trustpilot_ratings_4halfstar-RGB"
      stroke="none"
      stroke-width="1"
    >
      <g>
        <g>
          <rect
            fill="#00B67A"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path1"
            width="96"
            x="0"
            y="0"
          />
          <rect
            fill="#00B67A"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path2"
            width="96"
            x="104"
            y="0"
          />
          <rect
            fill="#00B67A"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path3"
            width="96"
            x="208"
            y="0"
          />
          <rect
            fill="#00B67A"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path4"
            width="96"
            x="312"
            y="0"
          />
          <g
            fill-rule="nonzero"
            id="Half"
            transform="translate(416.000000, 0.000000)"
          >
            <rect
              fill="#DCDCE6"
              height="96"
              id="Rectangle-path5"
              width="48"
              x="48"
              y="0"
            />
            <rect
              fill="#00B67A"
              height="96"
              id="Rectangle-path6"
              width="48"
              x="0"
              y="0"
            />
          </g>
          <path
            d="M48,64.7 L62.6,61 L68.7,79.8 L48,64.7 Z M81.6,40.4 L55.9,40.4 L48,16.2 L40.1,40.4 L14.4,40.4 L35.2,55.4 L27.3,79.6 L48.1,64.6 L60.9,55.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape1"
          />
          <path
            d="M152,64.7 L166.6,61 L172.7,79.8 L152,64.7 Z M185.6,40.4 L159.9,40.4 L152,16.2 L144.1,40.4 L118.4,40.4 L139.2,55.4 L131.3,79.6 L152.1,64.6 L164.9,55.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape2"
          />
          <path
            d="M256,64.7 L270.6,61 L276.7,79.8 L256,64.7 Z M289.6,40.4 L263.9,40.4 L256,16.2 L248.1,40.4 L222.4,40.4 L243.2,55.4 L235.3,79.6 L256.1,64.6 L268.9,55.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape3"
          />
          <path
            d="M360,64.7 L374.6,61 L380.7,79.8 L360,64.7 Z M393.6,40.4 L367.9,40.4 L360,16.2 L352.1,40.4 L326.4,40.4 L347.2,55.4 L339.3,79.6 L360.1,64.6 L372.9,55.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape4"
          />
          <path
            d="M464,64.7 L478.6,61 L484.7,79.8 L464,64.7 Z M497.6,40.4 L471.9,40.4 L464,16.2 L456.1,40.4 L430.4,40.4 L451.2,55.4 L443.3,79.6 L464.1,64.6 L476.9,55.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape5"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`<TrustpilotStars /> renders without a11y violations the given rating: 5 1`] = `
<div>
  <svg
    aria-labelledby="trust-pilot-rating-title trust-pilot-rating-desc"
    height="20px"
    role="img"
    viewBox="0 0 512 96"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <title
      id="trust-pilot-rating-title"
    >
      Trustpilot Stars Logo
    </title>
    <desc
      id="trust-pilot-rating-desc"
    >
      An illustration of the Trustpilot Stars Logo
    </desc>
    <g
      fill="none"
      fill-rule="evenodd"
      id="Trustpilot_ratings_5star-RGB"
      stroke="none"
      stroke-width="1"
    >
      <g>
        <g>
          <rect
            fill="#00B67A"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path1"
            width="96"
            x="0"
            y="0"
          />
          <rect
            fill="#00B67A"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path2"
            width="96"
            x="104"
            y="0"
          />
          <rect
            fill="#00B67A"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path3"
            width="96"
            x="208"
            y="0"
          />
          <rect
            fill="#00B67A"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path4"
            width="96"
            x="312"
            y="0"
          />
          <rect
            fill="#00B67A"
            fill-rule="nonzero"
            height="96"
            id="Rectangle-path5"
            width="96"
            x="416"
            y="0"
          />
          <path
            d="M48,64.7 L62.6,61 L68.7,79.8 L48,64.7 Z M81.6,40.4 L55.9,40.4 L48,16.2 L40.1,40.4 L14.4,40.4 L35.2,55.4 L27.3,79.6 L48.1,64.6 L60.9,55.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape1"
          />
          <path
            d="M152,64.7 L166.6,61 L172.7,79.8 L152,64.7 Z M185.6,40.4 L159.9,40.4 L152,16.2 L144.1,40.4 L118.4,40.4 L139.2,55.4 L131.3,79.6 L152.1,64.6 L164.9,55.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 L185.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape2"
          />
          <path
            d="M256,64.7 L270.6,61 L276.7,79.8 L256,64.7 Z M289.6,40.4 L263.9,40.4 L256,16.2 L248.1,40.4 L222.4,40.4 L243.2,55.4 L235.3,79.6 L256.1,64.6 L268.9,55.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 L289.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape3"
          />
          <path
            d="M360,64.7 L374.6,61 L380.7,79.8 L360,64.7 Z M393.6,40.4 L367.9,40.4 L360,16.2 L352.1,40.4 L326.4,40.4 L347.2,55.4 L339.3,79.6 L360.1,64.6 L372.9,55.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 L393.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape4"
          />
          <path
            d="M464,64.7 L478.6,61 L484.7,79.8 L464,64.7 Z M497.6,40.4 L471.9,40.4 L464,16.2 L456.1,40.4 L430.4,40.4 L451.2,55.4 L443.3,79.6 L464.1,64.6 L476.9,55.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 L497.6,40.4 Z"
            fill="#FFFFFF"
            fill-rule="nonzero"
            id="Shape5"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;
